Fix svg overflowing in IE

--- a/_assets/stylesheets/style.scss
+++ b/_assets/stylesheets/style.scss
@@ -149,6 +149,7 @@ output {
 
 .svg-container {
   margin-bottom: 20px;
+  overflow: hidden;
   #display & {
     border: 1px solid #ddd;
     border-radius: 4px;
